German translation of error messages for newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103510 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/newsletter.lang
+++ b/de/newsletter.lang
@@ -138,42 +138,42 @@ Einstellungen speichern
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Danke für die Aktualisierung Ihrer E-Mail-Einstellungen.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Sie wurden aus der Abonnentenliste entfernt.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Es tut uns Leid, dass Sie gehen. Würden Sie uns bitte sagen, warum Sie uns verlassen?
 
 
 ;You send too many emails.
-You send too many emails.
+Ihr habt zu viele E-Mails geschickt.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Eure Inhalte waren für mich nicht relevant.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Euer E-Mail-Design war zu schwer zu lesen.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Ich habe mich dafür nicht angemeldet.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Ich bleibe lieber über Facebook und Twitter mit Mozilla in Verbindung.
 
 
 ;Submit
-Submit
+Absenden
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Danke, dass Sie uns gesagt haben, warum Sie uns verlassen.
 
 
