--- a/eo/newsletter.lang
+++ b/eo/newsletter.lang
@@ -138,42 +138,42 @@ Konservi preferojn
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Dankon pro la ĝisdatigo de viaj preferoj.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Vi estis malabonita.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Ni bedaŭras vian malabonon.  Ĉu vi ŝatus diri al ni kial vi foriras?
 
 
 ;You send too many emails.
-You send too many emails.
+Vi sendas tro multe da retpoŝtaj mesaĝoj.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Viaj mesaĝoj ne estis gravaj por mi.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+La aranĝado de viaj mesaĝoj estis tro malfacile legebla.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Mi me abonis tion ĉi.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Mi anstataŭe sekvas Mozilla per Facebook kaj Twitter.
 
 
 ;Submit
-Submit
+Sendi
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Dankon por respondi kial vi foriras.
 
 
