Hungarian translation update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103522 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hu/newsletter.lang
+++ b/hu/newsletter.lang
@@ -138,42 +138,42 @@ Beállítások mentése
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Köszönjük, hogy frissítette e-mailbeállításait.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Leiratkozása megtörtént.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Sajnáljuk, hogy nem marad velünk. Megosztaná velünk távozásának okát?
 
 
 ;You send too many emails.
-You send too many emails.
+Túl sok e-mailt kapok.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+A tartalom nem érdekes számomra.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Az e-mail a design miatt nehezen olvasható.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Nem iratkoztam fel.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Inkább a Facebookon és a Twitteren tartom a kapcsolatot a Mozillával.
 
 
 ;Submit
-Submit
+Elküld
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Köszönjük, hogy megosztotta velünk leiratkozásának okát.
 
 
