--- a/hu/snippets.lang
+++ b/hu/snippets.lang
@@ -118,6 +118,6 @@ Hívja meg barátait, hogy megnézhessék az új funkciókat. <a href="%">Legyen
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Több számítógépen is használ Firefoxot? Mostantól szinkronizálhatja a kiterjesztéseit közöttük. <a href="%">Ismerje meg, hogyan aktiválhatja a Sync szolgáltatást.</a>
 
 
