[pt-BR] Update newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103525 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pt-BR/newsletter.lang
+++ b/pt-BR/newsletter.lang
@@ -114,66 +114,66 @@ O Firefox também está nas suas redes sociais favoritas. Conecte-se a nós e en
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Gerencie suas <span>Assinaturas</span>
 
 
 ;Subscribe
-Subscribe
+Inscrever
 
 
 ;Unsubscribe
-Unsubscribe
+Cancelar
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Marque aqui se você quer parar de receber todos os emails relacionados à Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Me excluir de todos os emails da Mozilla
 
 
 ;Save Preferences
-Save Preferences
+Salvar preferências
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Obrigado por atualizar suas preferências de email.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Sua assinatura foi cancelada.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Estamos tristes com sua saída. Você se importa de nos dizer porque está saindo?
 
 
 ;You send too many emails.
-You send too many emails.
+Vocês enviam emails demais.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+O conteúdo não era relevante para mim.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+O email era muito difícil de ler.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Eu não me inscrevi para receber estes emails.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Eu estou acompanhando a Mozilla no Facebook e Twitter.
 
 
 ;Submit
-Submit
+Enviar
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Obrigado por esclarecer sua partida.
 
 
