--- a/pt-BR/newsletter.lang
+++ b/pt-BR/newsletter.lang
@@ -74,7 +74,7 @@ Tudo pronto! <span>Mas espere, Tem mais</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Que receber as informações mais relevantes? Conte-nos um pouco mais sobre si mesmo. E enquanto você está aqui, inscreva-se para a notícia Mozilla outro.
+Que receber as informações mais relevantes? Conte-nos um pouco mais sobre você. E enquanto você está aqui, inscreva-se em outras notícias da Mozilla.
 
 
 ;Firefox & You
