[pt-BR] Update snippets.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103529 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pt-BR/snippets.lang
+++ b/pt-BR/snippets.lang
@@ -118,7 +118,7 @@ Convide amigos pra pré-visualizar os recursos do Firefox que estão por vir. <a
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Usando o Firefox em vários computadores? Agora você pode sincronizar seus complementos entre eles. <a href="%">Descubra como ativar o Sync.</a>
 
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
