--- a/pt-BR/mobile.lang
+++ b/pt-BR/mobile.lang
@@ -2,130 +2,130 @@
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Baixe o Firefox para Android
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Baixe para <span>Android</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Grátis no Android Market
 
 
 ;Or visit <a %s>Firefox.com/m</a> on your phone.
-Or visit <a %s>Firefox.com/m</a> on your phone.
+Ou visite <a %s>Firefox.com/m</a> no seu celular.
 
 
 ;Supported Devices
-Supported Devices
+Dispositivos compatíveis
 
 
 ;Get it from iTunes - FREE
-Get it from iTunes - FREE
+Baixe no iTunes – GRÁTIS
 
 
 ;Firefox Home for <span>iPhone</span>
-Firefox Home for <span>iPhone</span>
+Firefox Home para <span>iPhone</span>
 
 
 ;Access your Firefox history, bookmarks and open tabs on your iPhone.
-Access your Firefox history, bookmarks and open tabs on your iPhone.
+Acesse seu histórico, favoritos e abas abertas no seu iPhone.
 
 
 ;Download Firefox to <span>Your Mobile</span>
-Download Firefox to <span>Your Mobile</span>
+Baixe o Firefox para o <span>seu celular</span>
 
 
 ;Want to test the latest features?
-Want to test the latest features?
+Quer testar as últimas funcionalidades?
 
 
 ;Get Firefox Home for iPhone
-Get Firefox Home for iPhone
+Baixe o Firefox Home para iPhone
 
 
 ;Download Beta for Android
-Download Beta for Android
+Baixe o Beta para Android
 
 
 ;Download
-Download
+Baixe
 
 
 ;for
-for
+para
 
 
 ;Free from iTunes
-Free from iTunes
+Grátis no iTunes
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
+Você irá experimentar funcionalidades novíssimas e nos ajudar a refinar e polir a versão final.
 
 
 ;Developer Tools
-Developer Tools
+Ferramentas para desenvolvedores
 
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
+Você pode instalar a versão móvel do Firefox no seu computador para testar, opinar, e criar complementos.
 
 
 ;Connect With Firefox for Mobile:
-Connect With Firefox for Mobile:
+Conecte-se com o Firefox Móvel:
 
 
 ;Monthly newsletter
-Monthly newsletter
+Newsletter mensal
 
 
 ;Follow us
-Follow us
+Nos siga
 
 
 ;Become a fan
-Become a fan
+Seja um fan
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
+O Firefox é cheio de inovações que permite que você digite menos, navegue mais, e acesse a Web rápida e facilmente.
 
 
 ;Freedom from typing
-Freedom from typing
+Livre de digitação
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-The Awesome Screen learns your favorite sites so you can browse with little or no typing.
+A Awesome Screen aprende seus sites favoritos para que você possa navegar com pouca ou nenhuma digitação.
 
 
 ;Best of both worlds
-Best of both worlds
+O melhor dos dois mundos
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
+Firefox para Android agora está redesenhado e otimizado para o jeito que você navega em celulares e tablets.
 
 
 ;Browse quick and easy
-Browse quick and easy
+Navegue rápida e facilmente
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
+Funcionalidades como Sync, navegação com abas e marcações com um toque trazem tudo que você quer ao alcance de suas mãos.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
-<a %s>Need help?</a> Visit our Firefox for Android Support site.
+<a %s>Precisa de ajuda?</a> Visite nosso site de suporte ao Firefox para Android.
 
 
 ;Download and test the build that’s right for you.
-Download and test the build that’s right for you.
+Baixe e teste a melhor versão para você.
 
 
 ;See all our channels for mobile »
-See all our channels for mobile »
+Veja nossos canais para o Móvel »
 
 
