l10n: es-ES, visual fix with an exclamation mark
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103545 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/newsletter.lang
+++ b/es-ES/newsletter.lang
@@ -58,7 +58,7 @@ Te enviamos un mensaje de confirmación por correo. Haz clic en el enlace de con
 
 
 ;Read all about it in our <span>newsletter</span>
-¡Lee toda la información sobre Firefox en <span>nuestro boletín</span>!
+¡Lee toda la información sobre Firefox en <span>nuestro boletín!</span>
 
 
 ;Your newsletter subscription has been confirmed.
