[l10n: gl] updated newsletter.lang file for www.mozilla.org - add more newsletter strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103583 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gl/newsletter.lang
+++ b/gl/newsletter.lang
@@ -114,27 +114,27 @@ Firefox tamén está nas súas redes sociais favoritas. Conecte connosco e únas
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Xestionar as <span>subscricións aos boletíns</span>
 
 
 ;Subscribe
-Subscribe
+Subscribir
 
 
 ;Unsubscribe
-Unsubscribe
+Cancelar subscrición
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Marque aquí se desexa darse de baixa de todos os correos de Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Darme de baixa de todos os correos de Mozilla
 
 
 ;Save Preferences
-Save Preferences
+Gardar preferencias
 
 
 ;Thanks for updating your email preferences.
