[l10n: gl] updated newsletter.lang file for www.mozilla.org - add newsletter center change confirm string
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103584 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gl/newsletter.lang
+++ b/gl/newsletter.lang
@@ -138,7 +138,7 @@ Gardar preferencias
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Grazas por actualizar as súas preferencias do correo.
 
 
 ;You've been unsubscribed.
