[l10n: gl] updated newsletter.lang file for www.mozilla.org - add all error messages for the newsletter center
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103586 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gl/newsletter.lang
+++ b/gl/newsletter.lang
@@ -142,38 +142,38 @@ Grazas por actualizar as súas preferencias do correo.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Cancelou a súa subscrición.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Sentimos que se vaia. Importaríalle dicirnos porque se vai?
 
 
 ;You send too many emails.
-You send too many emails.
+Envían demasiados correos.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+O contido non era relevante para min.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+O deseño do correo era demasiado difícil de ler.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Non me din de alta nesta subscrición.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+No seu lugar estou mantendo o contacto con Mozilla en Facebook e Twitter.
 
 
 ;Submit
-Submit
+Enviar
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Grazas por dicirnos porque se vai.
 
 
