[l10n: gl] updated snippets.lang file for www.mozilla.org - add a dozen new snippets to translate for all locales
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103600 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gl/snippets.lang
+++ b/gl/snippets.lang
@@ -82,39 +82,39 @@ Descargue Firefox na súa tableta Android e pon o poder da Web nas súas mans. <
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Descargue Firefox beta</a>, dea a súa opinión e fai que o próximo Firefox sexa incluso máis incríbel para os 450 millóns de usuarios nosos.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Probe as características, defíneas e perfeccióneas e axude a que a nosa próxima versión sexa incluso mellor. <a href="%">Descargue Firefox beta!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Gústalle o Firefox? Quere axudar a que a nosa próxima versión sexa incluso mellor? <a href="%">Descargue Firefox beta</a> e déanos a súa opinión!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+Está executando a última versión de Firefox beta? <a href="%">Fágase con ela agora</a> e axúdenos a probar as últimas características.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Non ten a última versión de Firefox beta? <a href="%">Fágase con ela hoxe</a> para manterse ao día das innovacións nas que traballamos para a próximas versión.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Quere compartir a súa opinión? <a href="%">Descubra como</a> e axude a facer a próxima versión do Firefox incluso máis incríbel.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Usuarios de Firefox beta: Non esquezades <a href="%">dar as vosas opinións</a> para axudarnos a facer os últimos axustes da próxima versión.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Axude a facer a próxima versión do Firefox incluso máis incríbel. <a href="%">Fágase simpatizante</a> e comparta Firefox Beta cos seus amigos.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Invite aos seus amigos a que vexan as características que terá o Firefox no futuro. <a href="%">Fágase simpatizante</a> e comparta Firefox Aurora hoxe.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
