--- a/gl/snippets.lang
+++ b/gl/snippets.lang
@@ -118,6 +118,6 @@ Invite aos seus amigos a que vexan as características que terá o Firefox no fu
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Usa o Firefox en varios equipos? Agora pode sincronizar os complementos en todos eles. <a href="%">Descubra como activar Sync.</a>
 
 
