--- a/pt-BR/newsletter.lang
+++ b/pt-BR/newsletter.lang
@@ -121,7 +121,7 @@ O conteúdo não era relevante para mim.
 O e-mail era muito difícil de ler.
 
 ;I didn't sign up for this.
-Eu não me inscrevi para receber estes e-mails.
+Eu não me inscrevi para receber esses e-mails.
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
 Eu estou acompanhando a Mozilla pelo Facebook e Twitter.
