--- a/pt-BR/main.lang
+++ b/pt-BR/main.lang
@@ -197,13 +197,13 @@ Formato Ogg Theora
 Formato MPEG-4
 
 ;Whoops! Be sure to enter a valid email address.
-Ops! Certifique-se de ter digitado um email válido.
+Ops! Certifique-se de ter digitado um e-mail válido.
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
 Por favor, leia a Política Mozilla de Privacidade e concorde marcando a caixa.
 
 ;Please enter your email address and review the Mozilla Privacy Policy.
-Por favor, digite o seu email e releia a Política Mozilla de Privacidade.
+Por favor, digite o seu e-mail e releia a Política Mozilla de Privacidade.
 
 ;Mobile
 Firefox Móvel
@@ -272,7 +272,7 @@ Firefox Beta Móvel
 Firefox Móvel
 
 ;Email
-Email {ok}
+E-mail
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
 Mozilla Firefox: trazendo a web moderna ao XP.
