--- a/pt-BR/newsletter.lang
+++ b/pt-BR/newsletter.lang
@@ -4,7 +4,7 @@
 Receba notícias mensalmente
 
 ;Your Email Address
-Seu endereço de email
+Seu endereço de e-mail
 
 ;Text
 Texto
@@ -55,7 +55,7 @@ Formato
 Tudo pronto! <span>Mas espere, Tem mais</span>
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Que receber as informações mais relevantes? Conte-nos um pouco mais sobre você. E enquanto você está aqui, inscreva-se em outras notícias da Mozilla.
+Quer receber as informações mais relevantes? Conte-nos um pouco mais sobre você. E enquanto você está aqui, inscreva-se em outras notícias da Mozilla.
 
 ;Firefox & You
 Firefox e Você
