updating new translations
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103653 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ast/newsletter.lang
+++ b/ast/newsletter.lang
@@ -114,66 +114,65 @@ Firefox tamién ta nes tos redes sociales favorites. Coneuta con nós y xúnite 
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Remanar les tos <span>soscripciones a los boletines</span>
 
 
 ;Subscribe
-Subscribe
+Soscribime
 
 
 ;Unsubscribe
-Unsubscribe
+Encaboxar soscripción
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Conseña equí si quies date de baxa de tolos correos de Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Esborrame de tolos correos de Mozilla
 
 
 ;Save Preferences
-Save Preferences
+Guardar preferencies
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Gracies por anovar les tos preferencies de corréu.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Anulóse la to soscripción.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Llamentamos enforma que nos dexes. ¿Importaríate dicinos el motivu?
 
 
 ;You send too many emails.
-You send too many emails.
+Recibo munchos correos.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+El conteníu nun yera relevante pa mí.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+El diseñu del corréu nun facilitaba la llectura.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Nun me di d'alta nesta soscripción.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Prefiero siguir en contautu con Mozilla en Facebook y Twitter.
 
 
 ;Submit
-Submit
+Unviar
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
-
+Gracies por danos les tos razones.
 
