Bug 740752 - [fr] Localize ESR pages in French - .lang file.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103656 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/esr.lang
+++ b/fr/esr.lang
@@ -1,14 +1,14 @@
 ;Download Firefox Extended Release Support for Your Organization, Business, Enterprise
-Download Firefox Extended Release Support for Your Organization, Business, Enterprise
+Télécharger Firefox Extended Release Support pour votre organisation, administration, entreprise
 
 
 ;Subscribe to the Enterprise Working Group (EWG) mailing list
-Subscribe to the Enterprise Working Group (EWG) mailing list
+S'abonner à la liste de diffusion Enterprise Working Group (EWG)
 
 
 ;Full Name
-Full Name
+Nom complet
 
 
 ;Subscribe
-Subscribe
+S'abonner
