updating new translations in snippets
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103660 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ast/snippets.lang
+++ b/ast/snippets.lang
@@ -118,6 +118,6 @@ Invita a los tos collacios a que vean les carauterístique que va tener Firefox 
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+¿Uses Firefox en más equipos? Agora pues sincronizar los tos complementos en toos ellos. <a href="%">Descubre cómo facelo con Sync.</a>
 
 
