--- a/da/newsletter.lang
+++ b/da/newsletter.lang
@@ -46,7 +46,7 @@ Tak for din tilmelding!
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-Vi ser frem til snarest at dele tips og tricks om, hvordan du får mest muligt ud af Firefox, samt spændende nyheder om Mozilla, og hvordan vi arbejder på at skabe et bedre web.
+Vi ser frem til snarest at dele tips og tricks om, hvordan du får mest muligt ud af Firefox samt spændende nyheder om Mozilla, og hvordan vi arbejder på at skabe et bedre web.
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
@@ -74,7 +74,7 @@ Du er klar! <span>Men vent, der er mere</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Vil du have de mest relevante informationer? Fortæl os lidt mere om dig selv. Og mens du er her, tilmeld dig andre Mozilla-nyheder.
+Vil du have de mest relevante informationer? Fortæl os lidt mere om dig selv. Og mens du er her, så tilmeld dig andre Mozilla-nyheder.
 
 
 ;Firefox & You
@@ -114,7 +114,7 @@ Firefox er også på dine foretrukne sociale netværkssteder. Slut dig til os og
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Håndter dine <span>abonnementer på nyhedsbreve</span>
 
 
 ;Subscribe
@@ -126,11 +126,11 @@ Afmeld abonnement
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Sæt flueben her, hvis du vil frameldes alle mails fra Mozilla
 
 
 ;Remove me from all Mozilla emails
-Afmeld mig alle Mozillas mails
+Frameld mig fra alle mails fra Mozilla
 
 
 ;Save Preferences
@@ -138,42 +138,42 @@ Gem præferencer
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Tak fordi du opdaterede dine mailpræferencer.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Du er blevet frameldt.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Vi er kede af at du framelder dig. Vil du fortælle os hvorfor?
 
 
 ;You send too many emails.
-You send too many emails.
+I sender for mange mails.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Indholdet var ikke relevant for mig.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Mailens udformning gjorde den svær at læse.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Jeg har ikke tilmeldt mig.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Jeg holder kontakten med Mozilla på Facebook og Twitter i stedet.
 
 
 ;Submit
-Submit
+Indsend
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Tak fordi du fortæller os, hvorfor du framelder dig.
 
 
