--- a/da/snippets.lang
+++ b/da/snippets.lang
@@ -82,7 +82,7 @@ Download Firefox til din Android tablet, og få internettets styrke i hænderne.
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox beta</a>, fortæl os din mening og hjælp med at gøre den næste Firefox endnu mere fantastisk til vores 450 millioner brugere.
+<a href="%">Download Firefox beta</a>, fortæl os din mening og hjælp med at gøre den næste Firefox endnu mere fantastisk for vores 450 millioner brugere.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
@@ -94,19 +94,19 @@ Elsker du Firefox? Vil du hjælpe os med at gøre den næste version endnu bedre
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Kører du med den seneste Firefox beta? <a href="%">Hent den nu</a>, og hjælp os teste de seneste funktioner.
+Kører du med den nyeste Firefox beta? <a href="%">Hent den nu</a>, og hjælp os teste de nyeste funktioner.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Bruger du ikke den seneste Firefox beta? <a href="%">Hent den i dag</a>, og vær på forkant med den næste version.
+Bruger du ikke den nyeste Firefox beta? <a href="%">Hent den i dag</a>, og vær på forkant med den næste version.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Vil du fortælle os din mening? <a href="%">Find ud af hvordan</a>, og hjælp os lave den næste version af Firefox endnu mere fantastisk.
+Vil du fortælle os din mening? <a href="%">Find ud af hvordan</a>, og hjælp os med at lave den næste version af Firefox endnu mere fantastisk.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Brugere af Firefox beta: Glem ikke at <a href="%">komme med din mening</a> og hjælp os med at lave de endelige finjusteringer af den næste version.
+Brugere af Firefox beta: Glem ikke at <a href="%">komme med din mening</a> og hjælpe os med at lave de endelige finjusteringer af den næste version.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
@@ -118,6 +118,6 @@ Inviter venner til at se de kommende funktioner i Firefox, og <a href="%">del Fi
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Bruger du Firefox på flere computere? Nu kan du synkronisere dine tilføjelser på dem alle. <a href="%">Find ud af, hvordan du aktiverer Sync.</a>
 
 
