--- a/cs/snippets.lang
+++ b/cs/snippets.lang
@@ -82,42 +82,42 @@ Stáhněte si Firefox pro váš tablet s Androidem a pociťte sílu webu ve vaš
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Stáhněte si Firefox Beta</a>, poskytněte nám reakci a pomozte tak učinit příští verzi Firefoxu pro 450 miliónů uživatelů ještě lepší.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Testujte funkce, připomínkujte je a pomáhejte nám tak učinit naši příští verzi ještě lepší. <a href="%">Stáhněte si Firefox Beta ještě dnes</a>!
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Máte rádi Firefox? Chcete pomoci učinit příští verzi ještě lepší? <a href="%">Stáhněte si Firefox Beta</a> a dejte nám vědět, co si o něm myslíte!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+Používáte poslední Firefox Beta? <a href="%">Stáhněte si jej</a> a pomozte nám otestovat nejnovější funkce.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Nepoužíváte poslední Firefox Beta? <a href="%">Získejte jej ještě dnes</a> a mějte přehled o tom, co bude v příští verzi.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Chcete nám poslat reakci? <a href="%">Podívejte se</a>, jak nám můžete pomoci udělat příští verzi Firefoxu ještě lepší.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Uživatelé Firefox Beta: Nezapomeňte <a href="%">poslat reakci</a>, která nám pomůže zlepšit naši příští verzi.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Pomozte učinit příští verzi Firefoxu ještě lepší. a href="%">Zapojte se do Partnerského programu</a> a sdílejte informace o Firefox Beta s přáteli. 
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Pozvěte přátele, aby se podívali na připravované novinky do Firefoxu. <a href="%">Zapojte se do Partnerského programu</a> a sdílejte informace o Firefox Aurora již dnes.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Používáte Firefox na více počítačích? Nyní máte možnost napříč nimi synchronizovat své doplňky. <a href="%">Přečtěte si, jak aktivovat Sync.</a>
 
 
