--- a/is/newsletter.lang
+++ b/is/newsletter.lang
@@ -138,42 +138,41 @@ Vista stillingar
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Takk fyrir að uppfæra tölvupóstsstillingar.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Búði er að afskrá þig af listanum.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Okkur þykir miður að þú sért að hætta. Viltu kannski segja okkur af hverju þú ert að hætta?
 
 
 ;You send too many emails.
-You send too many emails.
+Þið sendið of marga tölvupósta.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Innihaldið var ekki áhugavert fyrir mig.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Hönnun tölvupóstsins var of flókinn.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Ég skráði mig ekki á listann.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Ég held tengslum við Mozilla á Facebook og Twitter í staðinn.
 
 
 ;Submit
-Submit
+Senda
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
-
+Takk fyrir að láta okkur vita af hverju þú ert hættur.
 
