changes to .lang file
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103703 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-AR/newsletter.lang
+++ b/es-AR/newsletter.lang
@@ -126,7 +126,7 @@ Desuscribite
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Marcá esta casilla si querés ser removido de los mensajes de Mozilla
 
 
 ;Remove me from all Mozilla emails
@@ -138,42 +138,42 @@ Guardar las preferencias
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Gracias por actualizar tus preferencias de correo electrónico.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Fuiste desuscripto.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Nos entristece verte ir. ¿Te molestaría decirnos por qué no querés recibir más el boletín?
 
 
 ;You send too many emails.
-You send too many emails.
+Envían demasiados mensajes.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+El contenido no era interesante para mi.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+El diseño del boletín era demasiado difícil de leer.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+No me suscribí por esto.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Me mantendré al tanto de Mozilla en Facebook y Twitter.
 
 
 ;Submit
-Submit
+Enviar
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Gracias por decirnos por qué prefieres desuscribirte.
 
 
