--- a/es-AR/snippets.lang
+++ b/es-AR/snippets.lang
@@ -118,6 +118,6 @@ Invitá a tus amigos a probar las próximas funcionalidades de Firefoxs. <a href
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+¿Usás Firefox en muchos equipos? Ahora podés sincronizar tus complementos entre tus Firefox. <a href="%">Mirá cómo activar Sync.</a>
 
 
