el (Greek) translation for the latest strings in newsletter and snippets .lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103705 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/el/newsletter.lang
+++ b/el/newsletter.lang
@@ -114,7 +114,7 @@ Firefox για κινητά
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Διαχειριστείτε τις <span>συνδρομές σας σε δελτία νέων</span>
 
 
 ;Subscribe
@@ -126,11 +126,11 @@ Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Επιλέξτε το για να διαγραφτείτε από όλα τα μηνύματα του Mozilla
 
 
 ;Remove me from all Mozilla emails
-Διαγραφή από όλα τα νέα Mozilla
+Διαγραφή από όλα τα μηνύματα Mozilla
 
 
 ;Save Preferences
@@ -138,42 +138,42 @@ Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Ευχαριστούμε που ενημερώσατε τις προτιμήσεις αλληλογραφίας σας.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Έχετε διαγραφεί.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Λυπούμαστε που αποχωρείτε. Θα σας πείραζε να μας πείτε το γιατί;
 
 
 ;You send too many emails.
-You send too many emails.
+Στέλνετε πολλά μηνύματα.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Το περιεχόμενο δεν με ενδιέφερε.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Η διαμόρφωση των μηνυμάτων ήταν δυσανάγνωστη.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Δεν είχα ζητήσει συνδρομή.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Ενημερώνομαι για το έργο Mozilla από το Facebook και το Twitter.
 
 
 ;Submit
-Submit
+Υποβολή
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Σας ευχαριστούμε που μας εξηγείτε τον λόγο αποχώρησης σας.
 
 
