--- a/el/snippets.lang
+++ b/el/snippets.lang
@@ -118,6 +118,6 @@
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Χρησιμοποιείτε τον Firefox σε πάνω από ένα υπολογιστή; Τώρα μπορείτε να συγχρονίσετε και τα προσθετα σας. <a href="%">Δείτε πως να ενεργοποιήσετε το Sync.</a>
 
 
