l10n:lij correction langfile
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103707 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/main.lang
+++ b/lij/main.lang
@@ -370,7 +370,7 @@ Mozilla Firefox. Pòrta a modernitæ in sciô XP.
 
 
 ;Super speed
-Velocitæ che te fâ xoâ vîa o capéllo
+Velocitæ ch'a te fa xoâ vîa o capéllo
 
 
 ;Stunning graphics
